Fix code block overflow

--- a/sass/partials/_code.scss
+++ b/sass/partials/_code.scss
@@ -4,7 +4,7 @@
   pre {
     background: #f8f8ff;
     padding: 0.5em;
-    overflow: scroll;
+    overflow: auto;
   }
 
   .c { color: #999988; font-style: italic } /* Comment */
